fixed problem with css div overlaping

--- a/css/master_style.css
+++ b/css/master_style.css
@@ -8,7 +8,7 @@ body {
 
 .left {
 
-	width: 56%;
+	width: 33%;
 	margin-left:3%;
 	padding: 1%;
 	opacity:0.9;
